缓存重构完毕